fix(Transactions): overflow issue

--- a/src/components/Wallet/Transactions/Transactions.scss
+++ b/src/components/Wallet/Transactions/Transactions.scss
@@ -56,6 +56,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 8px;
+                overflow: hidden;
 
                 label {
                     display: flex;
@@ -70,6 +71,9 @@
                     font-size: 16px;
                     font-weight: 500;
                     opacity: 0.7;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
         }
